# Projeto-LI3

./: .gitignore  CMakeLists.txt  README.md  makefile
Dados/: prods.txt
grupo34/projC/: .gitignore  CMakeLists.txt  Doxyfile  makefile
grupo34/projC/docs/: Doxyfile
grupo34/projC/docs/html/: annotated.html  annotated_dup.js  classes.html  clientes_8h.html  clientes_8h.js  clientes_8h_source.html  colors_8h.html  colors_8h.js  colors_8h_source.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_63eeaa91b1f30bbc417cebf098eb662d.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f942a7a73394fda25d4213a70555b3f8.html  faturacao_mes_8h.html  faturacao_mes_8h.js  faturacao_mes_8h_source.html  files.html  filial_8h.html  filial_8h.js  filial_8h_source.html  filial_i_d_8h.html  filial_i_d_8h.js  filial_i_d_8h_source.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  md_docs__r_e_a_d_m_e.html  (+87 more)
grupo34/projC/include/: clientes.h  colors.h  faturacaoMes.h  filial.h  filialID.h  month.h  navegador.h  produtos.h  sgv.h  types.h  util.h  venda.h  vendas.h
grupo34/projC/src/: clientes.c  faturacaoMes.c  filial.c  main.c  month.c  navegador.c  produtos.c  sgv.c  util.c  venda.c  vendas.c
(+258 files in other folders)
